# zero2prod_tutorial

./: .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-3eb2c9bc55c215e83bbb29a043a4db9319a9906768d2656ae4e617061556cd20.json  query-5595b9612934aaf23da774a2fbfcc900b15d44de6a2042375bc9a7dbf29ddd59.json  query-7dc9ba3c9aef3a9f346f2d41313d056417d47a50c038c4d97ceb4ca9966f7668.json  query-ee9fb7f07de4ae1e09998ace856b515d22e985f0217e8010ebd6cdd80f343975.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260721071355_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs  unsubscribe.rs  utils.rs
tests/: health_check.rs
tests/api/: helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs  unsubscribe.rs
