[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
uuid = { version = "1.23.5", features = ["v4"] }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
config = "0.14.1"
chrono = "0.4.45"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1"
claims = "0.8.0"
validator = "0.20.0"
reqwest = { version = "0.12", features = ["json"] }
rand = { version = "0.8", features = ["std_rng"] }

[dev-dependencies]
once_cell = "1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1"
linkify = "0.8"
serde_urlencoded = "0.7"


[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "tls-native-tls",
]
